<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="#10808080">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gray_square_border"
        android:padding="10dp">

      <ImageView
          android:id="@+id/iv_file"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:src="@drawable/ic_file"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_file"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/tv_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_file_name"
                android:text="@string/size"
                android:textSize="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_file_name"
                android:text="@string/format"
                android:textSize="10dp"
                android:layout_toRightOf="@+id/tv_size"
                android:layout_marginLeft="10dp"
                />

        </RelativeLayout>

    </RelativeLayout>



</LinearLayout>