<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_file_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_file"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_file_name"
        app:layout_constraintBottom_toBottomOf="@string/date_created"
        android:src="@drawable/ic_pdf"
        android:scaleType="fitCenter"
        android:background="@drawable/bg_blue_rounded_corners"
        android:backgroundTint="@color/transparent_gray"

       />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/iv_file"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="15dp"
        android:textColor="@color/purple_700"
        android:text="@string/file_name"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_size"
        app:layout_constraintLeft_toRightOf="@+id/iv_file"
        app:layout_constraintTop_toBottomOf="@id/tv_file_name"
        android:textSize="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/date_created"
        app:layout_constraintLeft_toRightOf="@id/iv_file"
        app:layout_constraintTop_toBottomOf="@id/tv_size"
        android:layout_marginLeft="15dp"
        android:textColor="@color/blue"/>

    <RelativeLayout
        android:id="@+id/option_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        android:background="#20FF7F27"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_view"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            android:src="@drawable/ic_view"
            app:tint="@color/orange" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_delete"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@id/iv_view"
            android:scaleType="fitCenter"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/ic_delete"
            app:tint="@color/orange" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/option_layout"
        android:layout_marginTop="10dp"
        android:background="@color/transparent_gray_2"
        />




</androidx.constraintlayout.widget.ConstraintLayout>